form and participant counter

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                         <nav class="header__navigation">
                             <p class="header__close-button header__button">+</p>
                             <ul class="header__list">
-                                <li><a href="#" class="header__links">ГЛАВНАЯ</a></li>
+                                <li><a href="./index.html" class="header__links">ГЛАВНАЯ</a></li>
                                 <li><a href="#" class="header__links">ИНСТРУКЦИЯ</a></li>
                                 <li><a href="#" class="header__links">РАСПИСАНИЕ</a></li>
                                 <li><a href="#" class="header__links">СЕКЦИИ</a></li>
-                                <li><a href="#" class="header__links">РЕГИСТРАЦИЯ</a></li>
+                                <li><a href="./form.html" class="header__links">РЕГИСТРАЦИЯ</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -51,11 +51,11 @@
             <div class="head__wrapper">
                 <div class="head__block">
                     <div class="head__block-title">
-                        <h1 class="head__title">TECH FEST</h1>
+                        <h1 class="head__title head__title_position_left">TECH FEST</h1>
                         <h1 class="head__title head__title_position_right">TECH FEST</h1>
-                        <h1 class="head__title">TECH FEST</h1>
+                        <h1 class="head__title head__title_position_left">TECH FEST</h1>
                     </div>
-                    <a href="#" class="head__link">РЕГИСТРАЦИЯ</a>
+                    <a href="#" class="button head__link">РЕГИСТРАЦИЯ</a>
                 </div>
                 <img src="./assets/images/TechFest_logo_04.png" alt="TechFest_logo_04" class="head__image"> 
             </div>
