media screen  576px

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       
         <header class="header">
             <div class="header__wrapper header__wrapper_mobile-tablet-version">
-                <img src="./assets/images/TECH_FEST_logo.png" alt="TECH_FEST_logo" class="header__logo header__logo_size_sm">
+                <img src="./assets/images/TECH_FEST_logo.png" alt="TECH_FEST_logo" class="header__logo header__logo_size">
                 <p class="header__burger-button header__button">|||</p>
 
                 <div class="header__overlay">
