media screen 1200px

--- a/form.html
+++ b/form.html
@@ -30,19 +30,19 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class=" header__wrapper header__wrapper_desktop-laptop-version">
-                <img src="./assets/images/TECH_FEST_logo.png" alt="TECH_FEST_logo" class="header__logo header__logo_size_lg">
+            <div class=" header__wrapper header__wrapper_desktop-laptop-version">
+                <img src="./assets/images/TECH_FEST_logo.png" alt="TECH_FEST_logo" class="header__logo header__logo_size">
                 <nav class="header__navigation">
                     <ul class="header__list">
-                        <li><a href="#" class="header__links">ГЛАВНАЯ</a></li>
+                        <li><a href="./index.html" class="header__links">ГЛАВНАЯ</a></li>
                         <li><a href="#" class="header__links">ИНСТРУКЦИЯ</a></li>
                         <li><a href="#" class="header__links">РАСПИСАНИЕ</a></li>
                         <li><a href="#" class="header__links">СЕКЦИИ</a></li>
-                        <li><a href="#" class="header__links">РЕГИСТРАЦИЯ</a></li>
+                        <li><a href="./form.html" class="header__links">РЕГИСТРАЦИЯ</a></li>
                     </ul>
                 </nav>
                 
-            </div> -->
+            </div>
             
         </header>
 
