media screen 1200 fix

--- a/form.html
+++ b/form.html
@@ -79,6 +79,18 @@
                     <label for="participant2" class="form__label" id="form_label">ФИО участника:</label>
                     <input type="text" name="participant2" id="participant2" class="form__item" placeholder="ФИО участника" required>
                 </fieldset>
+                <fieldset class="form__fieldset form__show-teammate" >
+                    <label for="participant2" class="form__label" id="form_label">ФИО участника:</label>
+                    <input type="text" name="participant2" id="participant2" class="form__item" placeholder="ФИО участника" required>
+                </fieldset>
+                <fieldset class="form__fieldset form__show-teammate" >
+                    <label for="participant2" class="form__label" >ФИО участника:</label>
+                    <input type="text" name="participant2" id="participant2" class="form__item" placeholder="ФИО участника" required>
+                </fieldset>
+                <fieldset class="form__fieldset form__show-teammate">
+                    <label for="participant2" class="form__label">ФИО участника:</label>
+                    <input type="text" name="participant2" id="participant2" class="form__item" placeholder="ФИО участника" required>
+                </fieldset>
                 <p class="form__add-teammate" id="add_form_elem">Добавить участника +</p>
                 <input type="submit" value="ОТПРАВИТЬ" class="button form__item form__submit">
             </form>
