--- a/form.html
+++ b/form.html
@@ -12,7 +12,7 @@
     <div class="container">
         <header class="header">
             <div class="header__wrapper header__wrapper_mobile-tablet-version">
-                <img src="./assets/images/TECH_FEST_logo.png" alt="TECH_FEST_logo" class="header__logo header__logo_size">
+                <img src="./assets/images/TechFest_logo_07.png" alt="TECH_FEST_logo" class="header__logo header__logo_size">
                 <p class="header__burger-button header__button">|||</p>
 
                 <div class="header__overlay">
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class=" header__wrapper header__wrapper_desktop-laptop-version">
-                <img src="./assets/images/TECH_FEST_logo.png" alt="TECH_FEST_logo" class="header__logo header__logo_size">
+                <img src="./assets/images/TechFest_logo_07.png" alt="TECH_FEST_logo" class="header__logo header__logo_size">
                 <nav class="header__navigation">
                     <ul class="header__list">
                         <li><a href="./index.html" class="header__links">ГЛАВНАЯ</a></li>
@@ -99,5 +99,6 @@
         
     
     <script src="./assets/scripts/main.js"></script>
+    <script src="./assets/scripts/jquery.js"></script>
 </body>
 </html>
