--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                             <p class="header__close-button header__button">+</p>
                             <ul class="header__list">
                                 <li><a href="./index.html" class="header__links">ГЛАВНАЯ</a></li>
-                                <li><a href="#" class="header__links">ИНСТРУКЦИЯ</a></li>
-                                <li><a href="#" class="header__links">РАСПИСАНИЕ</a></li>
-                                <li><a href="#" class="header__links">СЕКЦИИ</a></li>
+                                <li><a href="./error_404.html" class="header__links">ИНСТРУКЦИЯ</a></li>
+                                <li><a href="./error_404.html" class="header__links">РАСПИСАНИЕ</a></li>
+                                <li><a href="./error_404.html" class="header__links">СЕКЦИИ</a></li>
                                 <li><a href="./form.html" class="header__links">РЕГИСТРАЦИЯ</a></li>
                             </ul>
                         </nav>
@@ -36,9 +36,9 @@
                 <nav class="header__navigation">
                     <ul class="header__list">
                         <li><a href="./index.html" class="header__links">ГЛАВНАЯ</a></li>
-                        <li><a href="#" class="header__links">ИНСТРУКЦИЯ</a></li>
-                        <li><a href="#" class="header__links">РАСПИСАНИЕ</a></li>
-                        <li><a href="#" class="header__links">СЕКЦИИ</a></li>
+                        <li><a href="./error_404.html" class="header__links">ИНСТРУКЦИЯ</a></li>
+                        <li><a href="./error_404.html" class="header__links">РАСПИСАНИЕ</a></li>
+                        <li><a href="./error_404.html" class="header__links">СЕКЦИИ</a></li>
                         <li><a href="./form.html" class="header__links">РЕГИСТРАЦИЯ</a></li>
                     </ul>
                 </nav>
