--- a/form.html
+++ b/form.html
@@ -69,7 +69,7 @@
                 </fieldset>
                 <fieldset class="form__fieldset">
                     <label for="participant1" class="form__label">ФИО капитана:</label>
-                    <input type="text" name="participant1" id="participant1" class="form__item" placeholder="ФИО каптина команды" required>
+                    <input type="text" name="participant1" id="participant1" class="form__item" placeholder="ФИО капитана команды" required>
                 </fieldset>
                 <fieldset class="form__fieldset">
                     <label for="email" class="form__label">Почта капитана:</label>
