--- a/form.html
+++ b/form.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/images/TechFest_logo_01.png" type="image/png">
     <link rel="stylesheet" href="./assets/styles/css/main.css">
+    <link rel="stylesheet" href="./assets/styles/css/animate.css">
     <title>TECH FEST</title>
 </head>
 <body>
     <div class="container">
         <header class="header">
             <div class="header__wrapper header__wrapper_mobile-tablet-version">
-                <img src="./assets/images/TechFest_logo_07.png" alt="TECH_FEST_logo" class="header__logo header__logo_size">
+                <a href="./index.html"><img src="./assets/images/TechFest_logo_07.png" alt="TECH_FEST_logo" class="header__logo header__logo_size"></a>
                 <p class="header__burger-button header__button">|||</p>
 
                 <div class="header__overlay">
@@ -31,7 +32,7 @@
                 </div>
             </div>
             <div class=" header__wrapper header__wrapper_desktop-laptop-version">
-                <img src="./assets/images/TechFest_logo_07.png" alt="TECH_FEST_logo" class="header__logo header__logo_size">
+                <a href="./index.html"><img src="./assets/images/TechFest_logo_07.png" alt="TECH_FEST_logo" class="header__logo header__logo_size"></a>
                 <nav class="header__navigation">
                     <ul class="header__list">
                         <li><a href="./index.html" class="header__links">ГЛАВНАЯ</a></li>
@@ -45,10 +46,9 @@
             </div>
             
         </header>
-
         <section class="registration">
             <h1 class="registration__title">Регистрация на участие</h1>
-            <form action="#" method="post" class="form">
+            <form action="#" method="post" class="form" id="form">
                 <fieldset class="form__fieldset">
                     <label for="team" class="form__label">Название команды:</label>
                     <input type="text" name="team" id="team" class="form__item" placeholder="Любое не оскорбительное" required>
