--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/images/TechFest_logo_01.png" type="image/png">
     <link rel="stylesheet" href="./assets/styles/css/main.css">
+    <link rel="stylesheet" href="./assets/styles/css/animate.css">
     <title>TECH FEST</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
       
         <header class="header">
             <div class="header__wrapper header__wrapper_mobile-tablet-version">
-                <img src="./assets/images/TechFest_logo_07.png" alt="TECH_FEST_logo" class="header__logo header__logo_size">
+                <a href="./index.html"><img src="./assets/images/TechFest_logo_07.png" alt="TECH_FEST_logo" class="header__logo header__logo_size"></a>
                 <p class="header__burger-button header__button">|||</p>
 
                 <div class="header__overlay">
@@ -32,7 +33,7 @@
                 </div>
             </div>
             <div class="header__wrapper header__wrapper_desktop-laptop-version">
-                <img src="./assets/images/TechFest_logo_07.png" alt="TECH_FEST_logo" class="header__logo header__logo_size">
+                <a href="./index.html"><img src="./assets/images/TechFest_logo_07.png" alt="TECH_FEST_logo" class="header__logo header__logo_size"></a>
                 <nav class="header__navigation">
                     <ul class="header__list">
                         <li><a href="./index.html" class="header__links">ГЛАВНАЯ</a></li>
@@ -50,7 +51,7 @@
         <section class="head">
             <div class="head__wrapper">
                 <div class="head__block">
-                    <div class="head__block-title">
+                    <div class="head__block-title" >
                         <h1 class="head__title head__title_position_left">TECH FEST</h1>
                         <h1 class="head__title head__title_position_right">TECH FEST</h1>
                         <h1 class="head__title head__title_position_left">TECH FEST</h1>
