--- a/form.html
+++ b/form.html
@@ -76,6 +76,10 @@
                     <input type="email" name="study_place" id="email" class="form__item" placeholder="Почта капитана команды" required>
                 </fieldset>
                 <fieldset class="form__fieldset" id="form_elem">
+                    <label for="tel" class="form__label">Телефон капитана:</label>
+                    <input type="tel" name="tel" id="tel" class="form__item" placeholder="телефон капитана" required>
+                </fieldset>
+                <fieldset class="form__fieldset" id="form_elem">
                     <label for="participant2" class="form__label" id="form_label">ФИО участника:</label>
                     <input type="text" name="participant2" id="participant2" class="form__item" placeholder="ФИО участника" required>
                 </fieldset>
