--- a/form.html
+++ b/form.html
@@ -16,7 +16,7 @@
                 <a href="./index.html"><img src="./assets/images/techfest_neon_logo.png" alt="TECH_FEST_logo" class="header__logo header__logo_size"></a>
                 <p class="header__burger-button header__button">|||</p>
 
-                <div class="header__overlay">
+                <div class="header__overlay animate__animated animate__fadeIn">
                     <div class="container">
                         <nav class="header__navigation">
                             <p class="header__close-button header__button">+</p>
@@ -75,7 +75,7 @@
                     <label for="email" class="form__label">Почта капитана:</label>
                     <input type="email" name="study_place" id="email" class="form__item" placeholder="Почта капитана команды" required>
                 </fieldset>
-                <fieldset class="form__fieldset" id="form_elem">
+                <fieldset class="form__fieldset">
                     <label for="tel" class="form__label">Телефон капитана:</label>
                     <input type="tel" name="tel" id="tel" class="form__item" placeholder="телефон капитана" required>
                 </fieldset>
@@ -84,16 +84,16 @@
                     <input type="text" name="participant2" id="participant2" class="form__item" placeholder="ФИО участника" required>
                 </fieldset>
                 <fieldset class="form__fieldset form__show-teammate" >
-                    <label for="participant2" class="form__label" id="form_label">ФИО участника:</label>
-                    <input type="text" name="participant2" id="participant2" class="form__item" placeholder="ФИО участника" required>
+                    <label for="participant3" class="form__label" id="form_label">ФИО участника:</label>
+                    <input type="text" name="participant3" id="participant3" class="form__item" placeholder="ФИО участника" required>
                 </fieldset>
                 <fieldset class="form__fieldset form__show-teammate" >
-                    <label for="participant2" class="form__label" >ФИО участника:</label>
-                    <input type="text" name="participant2" id="participant2" class="form__item" placeholder="ФИО участника" required>
+                    <label for="participant4" class="form__label" >ФИО участника:</label>
+                    <input type="text" name="participant4" id="participant4" class="form__item" placeholder="ФИО участника" required>
                 </fieldset>
                 <fieldset class="form__fieldset form__show-teammate">
-                    <label for="participant2" class="form__label">ФИО участника:</label>
-                    <input type="text" name="participant2" id="participant2" class="form__item" placeholder="ФИО участника" required>
+                    <label for="participant5" class="form__label">ФИО участника:</label>
+                    <input type="text" name="participant5" id="participant5" class="form__item" placeholder="ФИО участника" required>
                 </fieldset>
                 <p class="form__add-teammate" id="add_form_elem">Добавить участника +</p>
                 <input type="submit" value="ОТПРАВИТЬ" class="button form__item form__submit">
