--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="./index.html"><img src="./assets/images/techfest_neon_logo.png" alt="TECH_FEST_logo" class="header__logo header__logo_size"></a>
                 <p class="header__burger-button header__button">|||</p>
 
-                <div class="header__overlay">
+                <div class="header__overlay animate__animated animate__fadeIn">
                     <div class="container">
                         <nav class="header__navigation">
                             <p class="header__close-button header__button">+</p>
@@ -54,6 +54,10 @@
                 <a href="./form.html" class="button head__link">РЕГИСТРАЦИЯ</a>
             </div>
         </section>
+
+        <footer class="footer">
+            
+        </footer>
     </div>
     
     <script src="./assets/scripts/main.js"></script>
