--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="./assets/images/TechFest_logo_01.png" type="image/png">
     <link rel="stylesheet" href="./assets/styles/css/main.css">
     <link rel="stylesheet" href="./assets/styles/css/animate.css">
+    <link rel="stylesheet" href="./assets/styles/css/all.css">
     <title>TECH FEST</title>
 </head>
 <body>
@@ -56,7 +57,28 @@
         </section>
 
         <footer class="footer">
-            
+            <div class="footer__social-network-block">
+                <h2 class="footer__title">Следите за новостями в социальных сетях</h2>
+                <div class="footer__social-networks">
+                    <a href="#"><i class="fa-solid fa-paper-plane footer__icons"></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube footer__icons"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram footer__icons"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter footer__icons"></i></a>
+                </div>
+            </div>
+            <div class="footer__navigation-block">
+                <a href="./index.html"><img src="./assets/images/techfest_neon_logo.png" alt="TECH_FEST_logo" class="footer__logo footer__logo_size"></a>
+                <nav class="footer__navigation">
+                    <ul class="footer__list">
+                        <li><a href="./index.html" class="footer__links">Главная</a></li>
+                        <li><a href="#" class="footer__links">Инструкция</a></li>
+                        <li><a href="#" class="footer__links">Расписание</a></li>
+                        <li><a href="#" class="footer__links">Секции</a></li>
+                        <li><a href="./form.html" class="footer__links">Регистрация</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <p class="footer__copyright">Все права защищены  © 2022 </p>
         </footer>
     </div>
     
