--- a/form.html
+++ b/form.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="./assets/images/TechFest_logo_01.png" type="image/png">
     <link rel="stylesheet" href="./assets/styles/css/main.css">
     <link rel="stylesheet" href="./assets/styles/css/animate.css">
-    <link rel="stylesheet" href="./assets/styles/css/all.css">
+    <!-- <link rel="stylesheet" href="./assets/styles/css/all.css"> -->
     <title>TECH FEST</title>
 </head>
 <body>
