--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="./index.html"><img src="./assets/images/techfest_neon_logo.png" alt="TECH_FEST_logo" class="header__logo header__logo_size"></a>
                 <p class="header__burger-button header__button">|||</p>
 
-                <div class="header__overlay animate__animated animate__fadeIn">
+                <div class="header__overlay animate__animated animate__fadeIn animate__delay-0_6s">
                     <div class="container">
                         <nav class="header__navigation">
                             <p class="header__close-button header__button">+</p>
