new options in select

--- a/form.html
+++ b/form.html
@@ -50,7 +50,7 @@
         <section class="registration">
 
             <h1 class="registration__title">Регистрация на участие</h1>
-            <form action="#" method="post" class="form" id="form">
+            <form action="#" method="post" class="form" id="form" name="registration_from">
                 <fieldset class="form__fieldset">
                     <label for="team" class="form__label">Название команды:</label>
                     <input type="text" name="team" id="team" class="form__item" placeholder="Любое не оскорбительное" required>
@@ -62,11 +62,12 @@
                 <fieldset class="form__fieldset">
                     <label for="sections" class="form__label">Веберите секцию:</label>
                     <select name="sections" id="sections" class="form__item" required>
-                        <option value="#">lorem ipsum</option>
-                        <option value="#">lorem ipsum</option>
-                        <option value="#">lorem ipsum</option>
-                        <option value="#">lorem ipsum</option>
-                        <option value="#">lorem ipsum</option>
+                        <option value="fi">Финансовые иннофации</option>
+                        <option value="ds">Cybersecurity</option>
+                        <option value="ds">Data sciene</option>
+                        <option value="da">Дизайн и Анимация</option>
+                        <option value="st">Space Tech</option>
+                        <option value="rb">Robotics</option>
                     </select>
                 </fieldset>
                 <fieldset class="form__fieldset">
