--- a/instructions.html
+++ b/instructions.html
@@ -109,11 +109,8 @@
         <div class="container">
              <div class="footer__social-networks">
                  <a href="t.me/itech_su"><i class="fa-solid fa-paper-plane footer__icons" title="telegram"></i></a>
-                 <a href="#"><i class="fa-brands fa-youtube footer__icons" title="youtube"></i></a>
-                 <a href="#"><i class="fa-brands fa-instagram footer__icons" title="instagram"></i></a>
-                 <a href="#"><i class="fa-brands fa-twitter footer__icons" title="twitter"></i></a>
+                 <a href="http://wa.me/77472258835"><i class="fa-brands fa-whatsapp footer__icons" title="whatsapp"></i></a>
              </div>
-             
              <p class="footer__copyright">Все права защищены  © 2022 </p>
         </div>
          
