--- a/sections.html
+++ b/sections.html
@@ -309,8 +309,8 @@
     <footer class="footer">
         <div class="container">
              <div class="footer__social-networks">
-                 <a href="t.me/itech_su"><i class="fa-solid fa-paper-plane footer__icons" title="telegram"></i></a>
-                 <a href="http://wa.me/77472258835"><i class="fa-brands fa-whatsapp footer__icons" title="whatsapp"></i></a>
+                <a href="https://t.me/itech_su" target="_blank"><i class="fa-solid fa-paper-plane footer__icons" title="telegram"></i></a>
+                <a href="http://wa.me/77472258835" target="_blank"><i class="fa-brands fa-whatsapp footer__icons" title="whatsapp"></i></a>
              </div>
              
              <p class="footer__copyright">Все права защищены  © 2022 </p>
