--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./assets/images/TechFest_logo_01.png" type="image/png">
+    <link rel="stylesheet" href="./assets/styles/css/main.css">
+    <link rel="stylesheet" href="./assets/styles/css/animate.css">
+    <!-- <link rel="stylesheet" href="./assets/styles/css/all.css"> -->
+    <title>TECH FEST</title>
+</head>
+<body>
 <header class="header">
         <div class="container">
             <div class="header__wrapper header__wrapper_mobile-tablet-version">
@@ -79,3 +92,8 @@
        </div>
         
     </footer>
+        
+        <script src="./assets/scripts/main.js"></script>
+    <script src="https://kit.fontawesome.com/9abda80b04.js" crossorigin="anonymous"></script>
+</body>
+</html>
